scss/main.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@import 'typography';

@layer utilities {
  .word-spacing-0 {
    word-spacing: 0;
  }

  .word-spacing-4 {
    word-spacing: 1rem;
  }

  .word-spacing-8 {
    word-spacing: 2rem;
  }
}

input[type='number'] {
  -moz-appearance: textfield;

  &::-webkit-outer-spin-button,
  &::-webkit-inner-spin-button {
    -webkit-appearance: none;
  }
}

a {
  &[href*='about'],
  &[href*='technology'],
  &[href*='simple'],
  &[href*='research'],
  &[href*='coaches'] {
    @apply hover:cursor-about;
  }

  &[href*='locations'] {
    @apply hover:cursor-locations;
  }

  &[href*='news'] {
    @apply hover:cursor-news;
  }

  &[href*='stories'] {
    @apply hover:cursor-stories;
  }
}

.share-btn {
  @apply hidden;
  @apply p-2;
  @apply md:flex;
  @apply flex-col;
  @apply justify-center;
}

.share-panel {
  @apply block;
  @apply md:absolute;
  @apply md:top-16;
  @apply md:w-48;
  @apply md:right-10;
  @apply lg:right-4;
  @apply md:z-40;

  .absolute {
    @apply hidden;
    @apply md:block;
  }

  .share-panel__container {
    @apply md:ml-8;
    @apply md:mt-5;
  }

  .share-panel__wrapper {
    @apply flex;
    @apply flex-row;
    @apply md:flex-col;
    @apply text-xs;
    @apply uppercase;
    @apply items-center;
  }

  .share-panel__icons {
    @apply ml-2;
    @apply md:ml-0;
  }
}

.lang-btn,
.link,
footer a {
  @apply relative;
  @apply inline-block;
  @apply after:empty-content;
  @apply after:absolute;
  @apply after:h-[2px];
  @apply after:bottom-[-1px];
  @apply after:left-0;
  @apply after:bg-white;
  @apply after:w-full;
  @apply after:transition-transform;
  @apply after:duration-200;
  @apply after:origin-left;
}

.link,
.lang-btn.lang-btn--selected {
  @apply after:scale-x-100;
  @apply hover:after:scale-x-0;
}

.lang-btn {
  @apply lg:p-1;
  @apply after:bottom-0;
}

footer a,
.lang-btn {
  @apply after:scale-x-0;
  @apply hover:after:scale-x-100;
  @apply after:bg-black;
}

.menu-item a {
  @apply relative;
  @apply hidden;
  @apply lg:block;
  @apply after:empty-content;
  @apply after:absolute;
  @apply after:h-[2px];
  @apply after:bottom-[-1px];
  @apply after:left-0;
  @apply after:bg-white;
  @apply after:w-full;
  @apply hover:after:scale-x-100;
  @apply after:transition-transform;
  @apply after:duration-200;
  @apply after:origin-left;

  &.after\:scale-x-100 {
    @apply hover:after:scale-x-0;
  }
}

.h1 {
  @apply text-6xl;
  @apply md:text-8xl;
  @apply font-black;
  @apply leading-none;
  @apply mb-0;
}

.h4 {
  @apply text-2xl;
  @apply md:text-4xl;
  @apply leading-none;
  @apply word-spacing-0;
  @apply font-black;
}

.page-title {
  @apply text-2xl;
  @apply md:text-5xl;
  @apply leading-tight;
  @apply md:leading-none;
  @apply font-black;
  @apply relative;
  @apply z-10;
}

.about-link {
  @apply text-red;
  @apply inline-block;
  @apply relative;

  @apply after:empty-content;
  @apply after:absolute;
  @apply after:h-[3px];
  @apply after:bottom-[-3px];
  @apply after:left-0;
  @apply after:bg-red;
  @apply after:w-full;
  @apply hover:after:scale-x-100;
  @apply after:transition-transform;
  @apply after:duration-200;
  @apply after:origin-left;
  @apply after:z-10;
  @apply hover:after:scale-x-0;

  line-height: 0.8;

  span {
    @apply relative;
    @apply z-30;
    text-shadow: 3px 3px white, 3px -3px white, -3px 3px white, -3px -3px white;
  }
}

.about-link--mobile {
  @apply inline-block;
  @apply px-[10px];
  @apply first:pl-0;
  @apply last:pr-0;
  @apply border-black;
}

.content-header {
}

.content-container {
  @apply lg:min-h-screen;
  @apply relative;
  @apply lg:flex;
  @apply flex-col;
  @extend .content-container-bg;
  @extend .content-container-size;
  @extend .content-container-order;
  @extend .content-container-positioning;
}

.content-container-positioning {
  @apply lg:sticky;
  @apply top-0;
  @apply z-20;
}

.content-container-order {
  @apply order-2;
  @apply lg:order-1;
}

.content-container-size {
  @apply w-full;
  @apply lg:w-1/2;
}

.content-container-bg {
  @apply bg-red;
  @apply text-white;
}

.content-container-px {
  @apply px-4;
  @apply md:px-16;
}

body {
  // scroll-snap-type: y proximity;
}

.flex-last-item-align-start {
  @apply after:empty-content;
  @apply after:flex-1;
}

.snap-container {
  scroll-snap-type: mandatory;
  scroll-snap-points-y: repeat(100vh);
  scroll-snap-type: y mandatory;
}

.snap-child {
  scroll-snap-align: start;
}

.snap-end {
  scroll-snap-align: end;
}

.lg\:snap-child {
  @media (min-width: 1024px) {
    scroll-snap-align: start;
  }
}

.field-group {
  @apply flex;
  @apply flex-col;
  @apply md:flex-row;
  @apply md:items-end;
  @apply border-b-2;
  @apply border-red;
  @apply pb-1;
  @apply mb-3;
}

.input-wrapper {
  @apply w-full;
  @apply border-red;

  @apply first:border-b-2;
  @apply first:pb-1;
  @apply first:mb-3;
  @apply md:first:border-b-0;
  @apply md:first:pb-0;
  @apply md:first:mb-0;
  @apply last:border-b-0;
  @apply last:mb-0;
  @apply last:pb-0;
}

.input-radio {
  & + span:before {
    content: '';
    background: url(/images/unchecked.svg);
    width: 19px;
    height: 19px;
    @apply mr-2;
    @apply bg-no-repeat;
    @apply bg-contain;
    @apply inline-block;
    @apply align-top;
  }
  &:checked + span:before {
    background: url(/images/checked.svg);
  }
}

.text-field {
  @apply bg-transparent;
  @apply w-full;
  @apply text-red;
  @apply border-red;
  @apply block;
  @apply px-4;
  @apply focus:outline-none;

  @apply placeholder:opacity-40;
  @apply placeholder:text-red;
}

.has-error {
  @apply relative;
  @apply overflow-visible;
  @apply mt-3;

  @apply after:uppercase;
  @apply after:text-red;
  @apply after:text-xs;
  @apply after:text-center;
  @apply after:w-full;
  @apply after:absolute;
  @apply after:-top-4;
  @apply after:block;
  @apply after:left-0;
}

.form--en {
  .has-error::after {
    content: 'Forget ah?';
  }
}

.form--ms {
  .has-error::after {
    content: 'Dilupakan?';
  }
}

.form--zh {
  @apply font-chinese;
  * {
    @apply font-chinese;
  }

  .has-error::after {
    content: '您忘记了吗？';
  }
}

.form--disabled {
  .form__inner-wrap {
    @apply opacity-50;
  }
}

input[type='radio']:checked + .bubble {
  .bubble__image-wrapper {
    border-width: 4px !important;
  }
}

.bubble__link {
  @apply focus:outline-none;
}

.sign-up-btn {
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
}

.cursor-generic {
  button:not(.btn-sign--up),
  a {
    @apply hover:cursor-generic;
  }
}

.page-about {
  button:not(.btn-sign--up),
  a {
    @apply hover:cursor-about;
  }
}

.page-stories {
  button:not(.btn-sign--up),
  a {
    @apply hover:cursor-stories;
  }
}

.page-locations {
  button:not(.btn-sign--up),
  a {
    @apply hover:cursor-locations;
  }
}

.page-news {
  button:not(.btn-sign--up),
  a {
    @apply hover:cursor-news;
  }
}

.btn-sign--up {
  @apply hover:cursor-signup;
}

